[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/ui/neighbor_deals_panel.gd" id="1"]

[node name="NeighborDealsPanel" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -175.0
offset_right = 200.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleBar" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBox/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Neighbor Deals"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="MarginContainer/VBox/TitleBar"]
layout_mode = 2
text = "X"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
size_flags_vertical = 3

[node name="DealsContainer" type="VBoxContainer" parent="MarginContainer/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SummaryLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
text = "Monthly: Cost $0 | Income $0 | Net: $0"
horizontal_alignment = 1
